# Murph

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  murph.cppm  types.cppm
src/canvas/: CMakeLists.txt  canvas.cppm  canvascontext.cppm  canvaspixel.cppm  canvasrenderer.cppm
src/error/: error.cppm
src/geometry/: CMakeLists.txt  geometry.cppm  geometrymodel.cpp  geometrymodel.cppm
src/math/: CMakeLists.txt  math.cppm  math_concepts.cppm  math_functions.cppm  math_mat2d.cppm  math_mat3d.cppm  math_mat4d.cppm  math_matrix.cppm  math_vec2d.cppm  math_vec3d.cppm  math_vec4d.cppm  math_vector.cppm
src/render/: CMakeLists.txt  render.cppm  rendercamera.cppm
